# unilog_rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  macros.rs  main.rs
